GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Improvements

  grep '[0-9]' is now just as fast as grep '[[:digit:]]' when run
  in a multi-byte locale.  Before, it was several times slower.

** Changes in behavior

  The following changes affect only MS-Windows platforms.  First, the
  --binary (-U) option now governs whether binary I/O is used, instead
  of a heuristic that was sometimes incorrect.  Second, the
  --unix-byte-offsets (-u) option now has no effect on MS-Windows too.


* Noteworthy changes in release 3.0 (2017-02-09) [stable]

** Bug fixes

  grep without -F no longer goes awry when given two or more patterns
  that contain no special characters other than '\' and also contain a
  subpattern like '\.' that escapes a character to make it ordinary.
  [bug introduced in grep 2.28]

  grep no longer fails to build on PCRE versions before 8.20.
  [bug introduced in grep 2.28]


* Noteworthy changes in release 2.28 (2017-02-06) [stable]

** Bug fixes

  When grep -Fo finds matches of differing length, it could
  mistakenly print a shorter one.  Now it prints a longest one.
  [bug introduced in grep-2.26]

  When standard output is /dev/null, grep no longer fails when
  standard input is a file in the Linux /proc file system, or when
  standard input is a pipe and standard output is in append mode.
  [bugs introduced in grep-2.27]

  Fix performance regression with multiple patterns, e.g., for -Fi in
  a multi-byte locale, or for -Fw in a single-byte locale.
  [bugs introduced in grep-2.19, grep-2.22 and grep-2.26]

** Improvements

  Improve performance for -E or -G pattern lists that are easily
  converted to -F format.


* Noteworthy changes in release 2.27 (2016-12-06) [stable]

** Bug fixes

  grep no longer reports a false match in a multibyte, non-UTF8 locale
  like zh_CN.gb18030, with a regular expression like ".*7" that just