@@ -93,12 +93,12 @@ grep_test "wordword/" "${CB}word${CE}word/" "\<word" --color=always
 grep_test "4/40/"  "4/40/"  "^4$" -m1 -A99
 grep_test "4/04/"  "4/04/"  "^4$" -m1 -A99
 grep_test "4/444/" "4/444/" "^4$" -m1 -A99
-grep_test "4/40/"  "4/"     "^4"  -m1 -A99
+grep_test "4/40/"  "4/40/"  "^4"  -m1 -A99
 grep_test "4/04/"  "4/04/"  "^4"  -m1 -A99
-grep_test "4/444/" "4/"     "^4"  -m1 -A99
+grep_test "4/444/" "4/444/" "^4"  -m1 -A99
 grep_test "4/40/"  "4/40/"  "4$"  -m1 -A99
-grep_test "4/04/"  "4/"     "4$"  -m1 -A99
-grep_test "4/444/" "4/"     "4$"  -m1 -A99
+grep_test "4/04/"  "4/04/"  "4$"  -m1 -A99
+grep_test "4/444/" "4/444/" "4$"  -m1 -A99
 
 
 # Test for "-F -w" bugs.  Thanks to Gordon Lack for these two.
